WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281655
Fix smart pointer warnings in NetworkDataTask.cpp and NetworkDataTaskCocoa.mm
https://bugs.webkit.org/show_bug.cgi?id=281655
Summary
Fix smart pointer warnings in NetworkDataTask.cpp and NetworkDataTaskCocoa.mm
Ryosuke Niwa
Reported
2024-10-17 00:14:32 PDT
Fix smart pointer static analyzer warnings in NetworkDataTask.cpp and NetworkDataTaskCocoa.mm.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-10-17 00:16:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35353
EWS
Comment 2
2024-10-17 18:16:28 PDT
Committed
285372@main
(dda9cb225de4): <
https://commits.webkit.org/285372@main
> Reviewed commits have been landed. Closing PR #35353 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-17 18:17:16 PDT
<
rdar://problem/138155564
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug