Fix smart pointer warnings in NetworkDataTask.cpp and NetworkDataTaskCocoa.mm https://bugs.webkit.org/show_bug.cgi?id=281655

Reviewed by Sihui Liu.

* Source/WebKit/NetworkProcess/NetworkDataTask.cpp:
(WebKit::NetworkDataTask::scheduleFailure):
* Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::setPendingDownloadLocation):
* Source/WebKit/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:

Canonical link: https://commits.webkit.org/285372@main